[gd_scene load_steps=9 format=3 uid="uid://b55gi2f4g553y"]

[ext_resource type="Script" path="res://Scripts/Mundo.gd" id="1_g0n4h"]
[ext_resource type="PackedScene" uid="uid://cm7m8cxvjlixu" path="res://Escenas/enemy.tscn" id="2_q14sf"]
[ext_resource type="Texture2D" uid="uid://kfxu2dg0ar3g" path="res://Personajes/Background.png" id="3_i2vg7"]
[ext_resource type="PackedScene" uid="uid://83t1p7bbqvfx" path="res://Escenas/Jugador.tscn" id="4_dt25s"]
[ext_resource type="PackedScene" uid="uid://dndkq82gsvscg" path="res://Escenas/colisiones.tscn" id="5_x8oem"]
[ext_resource type="PackedScene" uid="uid://c10r3cywv801g" path="res://Escenas/Bullet.tscn" id="6_owuol"]
[ext_resource type="PackedScene" uid="uid://1ywt8pegwruk" path="res://EmptyPos/EmptyPos.tscn" id="7_1iieq"]
[ext_resource type="PackedScene" uid="uid://g23050u7d6na" path="res://Escenas/gui.tscn" id="8_072qr"]

[node name="main" type="Node2D"]
script = ExtResource("1_g0n4h")
enemy_scene = ExtResource("2_q14sf")

[node name="Parallax2D" type="Parallax2D" parent="."]
scroll_offset = Vector2(-619, -582)
repeat_size = Vector2(0, 700)

[node name="Sprite2D" type="Sprite2D" parent="Parallax2D"]
position = Vector2(1196, 322)
scale = Vector2(2.36035, 1.38711)
texture = ExtResource("3_i2vg7")

[node name="Timer" type="Timer" parent="Parallax2D"]
wait_time = 10.0
autostart = true

[node name="Jugador" parent="." instance=ExtResource("4_dt25s")]
position = Vector2(629, 515)

[node name="colisiones" type="Node" parent="."]

[node name="Colisiones" parent="colisiones" instance=ExtResource("5_x8oem")]
position = Vector2(0, 2)

[node name="Bullet" parent="." instance=ExtResource("6_owuol")]
position = Vector2(628, 499)

[node name="TimerEnemy" type="Timer" parent="."]
wait_time = 2.4
autostart = true

[node name="EmptyPos1" parent="." instance=ExtResource("7_1iieq")]
position = Vector2(146, 28)

[node name="EmptyPos2" parent="." instance=ExtResource("7_1iieq")]
position = Vector2(558, 35)

[node name="EmptyPos3" parent="." instance=ExtResource("7_1iieq")]
position = Vector2(1008, 54)

[node name="GUI" parent="." instance=ExtResource("8_072qr")]

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="timeout" from="Parallax2D/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerEnemy" to="." method="_on_timer_enemy_timeout"]
